fixed the z-index problem on contact

--- a/src/layout/layout.module.scss
+++ b/src/layout/layout.module.scss
@@ -5,6 +5,7 @@
   display: flex;
   position: fixed;
   width: 91%;
+  z-index: 1;
   top: 0px;
   background-color: rgb(255, 255, 255);
   justify-content: space-between;
